Change project to java 8